# image2image

./: .gitignore  .pylintrc  LICENSE  README.md  evaluate.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test.py  testfile.txt  tox.ini  ttest.py
.github/: pull_request_template.md
.github/workflows/: tests.yml
api/: main.py  test_api.py
api/app/: __init__.py  api.py  image_processing.py
docs/: index.html
runs/expirement_1/: events.out.tfevents.1701136790.omarabdelgawad.22634.0  events.out.tfevents.1701136965.omarabdelgawad.26440.0  events.out.tfevents.1701137076.omarabdelgawad.29396.0
scripts/: cyclegan_evaluation.py  cyclegan_reverse_evaluation.py  evaluate.py
src/cfg/: __init__.py  enums.py
src/cli/: cli.py
src/data/: __init__.py  dataset.py
src/img2img/cfg/: __init__.py  cyclegan.py  enums.py  pix2pix.py  transform.py  tunit.py  unit.py
src/img2img/cli/: __init__.py  cli.py  utils.py
src/img2img/data/: __init__.py  cyclegan.py  dataset.py  pix2pix.py
src/img2img/engine/: __init__.py  base_trainer.py
src/img2img/models/cyclegan/: config.py  dataset.py  discriminator.py  generator.py  predictor.py  train.py  utils.py
src/img2img/models/pix2pix/: discriminator.py  generator.py  predictor.py  train.py  trainer.py  utils.py
src/img2img/models/tunit/: blocks.py  discriminator.py  generator.py  guiding_network.py  train.py  utils.py
src/img2img/models/unit/: discriminator.py  generator.py  train.py  trainer.py  utils.py
src/img2img/nn/: __init__.py  blocks.py
src/img2img/pix2pix/: discriminator.py  utils.py
src/img2img/tunit/: blocks.py  discriminator.py  generator.py  guiding_network.py  train.py
src/img2img/unit/: blocks.py  discriminator.py  generator.py  utils.py
src/img2img/utils/: __init__.py  cyclegan.py  pix2pix.py  tunit.py  unit.py
src/model/: cfg.py  cli.py  config.py  dataset.py  discriminator.py  generator.py  train.py  utils.py
src/pix2pix/: cfg.py  dataset.py  generator.py  train.py  utils.py
src/tunit/: __init__.py  blocks.py  cfg.py  cli.py  dataset.py  discriminator.py  generator.py  guiding_network.py  train.py  utils.py
src/tunit/test/: blocks.py  discriminator.py  guiding_network.py  vgg.py
src/unit/: blocks.py  cfg.py  cli.py  config.yaml  data.py  discriminator.py  generator.py  train.py  trainer.py  utils.py
tests/: custom_arg_parser_test.py  test_build.py
tests/pix2pix/: test_shapes.py
