[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "img2img"
dynamic = ["version"]
dependencies = [
    "requests",
    "torch >= 2.3.0 , < 3",
    "torchaudio >= 2.3.0, < 3",
    "torchvision >= 0.18.0, < 1",
    "albumentations >= 1.4.8, < 2",
    "tqdm",
    "tensorboard >= 2.16.2, < 3",
    ]
requires-python = ">=3.10"
authors = [
  {name = "Omar Abdelgawad", email = "omar.abdelgawad@ejust.edu.eg"},
  {name = "Eyad Hussein", email = "eyad.hussein@ejust.edu.eg"},
]
description = "image to image translation using GANs"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["image-to-image-translation", "GAN", "vision", "deep-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "tox",
    "flask",        # api dependency
    "requests",     # api dependency
]

[tool.setuptools.package-data]
img2img = ["py.typed"]

[project.urls]
Repository = "https://github.com/omar-abdelgawad/image2image"

[tool.pytest.ini_options]
addopts = "--cov=img2img" #include all packages under src directory
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = false


[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["UP","I"] # maybe add PL later

[tool.ruff.format]
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 88
