[metadata]
name = image2image
version = 0.0.1
description = A package for image to image translation using GANs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omar-abdelgawad/image2image
author = Omar Abdelgawad
author_email = omar.abdelgawad@ejust.edu.eg
keywords = image2image, GAN, vision
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
install_requires = file: requirements.txt
    ; requests>=2
python_requires = >=3.7
zip_safe = no

[options.packages.find]
where = src
; exclude =
;     tests

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    pylint>=2.9
    tox>=3.24
    ; flake8>=3.9

; [options.package_data]
; slapping = py.typed

; [flake8]
; max-line-length = 160